@@ -1,3 +1,9 @@
+2019-10-11  Jason Merrill  <jason@redhat.com>
+
+	* decl2.c (mark_used): Don't clobber DECL_SOURCE_LOCATION on
+	explicitly defaulted functions.
+	* method.c (synthesize_method): Likewise.
+
 2019-10-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/91987
